# Stata-Tools

./: .gitignore  AUDIT_SUMMARY.md  CLAUDE.md  CLAUDE_recommendation.md  LICENSE  README.md  VALIDATION_TESTING.md  _testing  _validation  advice.md  audit.md  datadict_audit.md  datamap_audit.md  issue_report.md  stata_ado_audit.md  tvevent_audit.md  tvexpose_audit.md  tvmerge_audit.md  tvmerge_batch_optimization_plan.md
.claude/: README.md  SKILLS_AND_HOOKS_RESULTS.md  settings.json
LEARNING_FUNCTIONALITY/: CLAUDE.md  README.md
Reimplementations/Python/tvtools/: .gitignore  README.md  STRUCTURE.txt  pyproject.toml  setup.py
Reimplementations/Python/tvtools/docs/: index.md  quickstart.md  tvevent_guide.md  tvmerge_guide.md
Reimplementations/Python/tvtools/examples/: basic_tvevent_example.py  basic_tvmerge_example.py  complete_workflow.py  ever_treated_example.py
Reimplementations/Python/tvtools/tests/: TEST_SUMMARY.md  conftest.py  test_tvevent.py  test_tvexpose.py  test_tvmerge.py
Reimplementations/Python/tvtools/tvtools/tvevent/: __init__.py  exceptions.py
Reimplementations/Python/tvtools/tvtools/tvexpose/: __init__.py  exposer.py  types.py  validators.py
Reimplementations/Python/tvtools/tvtools/tvmerge/: IMPLEMENTATION_SUMMARY.md  __init__.py  cartesian.py  merger.py  types.py
Reimplementations/Python/tvtools/tvtools/utils/: __init__.py  dates.py  io.py
_audits/: CHANGES_SUMMARY.md  audit_check.md  audit_compress_tc.md  audit_cstat_surv.md  audit_cstat_surv_summary.md  audit_datamap.md  audit_datefix.md  audit_datefix_summary.md  audit_massdesas.md  audit_mvp.md  audit_mvp_summary.md  audit_pkgtransfer.md  audit_regtab.md  audit_regtab_summary.md  audit_setools.md  audit_stratetab.md  audit_synthdata.md  audit_table1_tc.md  audit_today.md  audit_today_summary.txt  audit_tvtools.md  decisions.md  pkgtransfer_changes_summary.md  synthdata_audit_summary.md
_best_practices/: AUDIT_REVIEW_FRAMEWORK.md  AUDIT_REVIEW_SUMMARY.md  stata_development_guide.md
_data/: README.md  calendar.dta  cci.dta  cohort.dta  comorbidities.dta  migrations.dta  migrations_wide.dta  outcomes.dta  procedures.dta  relapses.dta  relapses_only.dta  treatment.dta  tv_benzo_episodes.dta  tv_events.dta  tv_merged.dta
_devkit/: README.md  optimization.md
_examples/: NHEFS_Codebook.xls  (+3 more)
(+3307 files in other folders)
